# computacao_grafica

./: .gitignore  README.md
OLD FILES/anothers/: Shader.h
Sabertooth/: CMakeLists.txt  Face.h  Group.h  Mesh.h  Obj3d.h  Sabertooth.vcxproj  Sabertooth.vcxproj.filters  main.cpp  main_mesh.cpp
Sabertooth/old_archives/: System.cpp  System.h
Sabertooth/projects/CurvesEditor/: CurvesEditor.cpp  CurvesEditor.h
Sabertooth/projects/CurvesEditor/export/: carPath.txt  pista.mtl
Sabertooth/projects/CurvesEditor/objs/mesa/: mesa01.mtl
Sabertooth/projects/CurvesEditor/objs/paintball/: muro02.ppm
Sabertooth/projects/CurvesEditor/shaders/: core.frag  core.vert
Sabertooth/projects/CurvesEditor/src/: Face.h  FileWriter.h  Group.h
Sabertooth/projects/TGA/: TGA.cpp  TGA.h
Sabertooth/projects/TGA/objs/paintball/: cenaPaintball.mtl  cópia de arv_tronco.ppm
Sabertooth/projects/TGA/shaders/: camera.frag  camera.vert  core.frag
Sabertooth/projects/TGA/src/: Material.h  Obj3d.h  Shader.h
Sabertooth/projects/TGB/: TGB.cpp  TGB.h
Sabertooth/projects/TGB/shaders/: core.frag  core.vert
Sabertooth/projects/TGB/src/: FileReader.h  Group.h  Material.h  Mesh.h  Obj3d.h
Sabertooth/projects/TrackReader/: TrackReader.cpp
Sabertooth/projects/TrackReader/objs/car/: car.mtl
Sabertooth/projects/TrackReader/objs/paintball/: grama01.ppm
Sabertooth/projects/TrackReader/shaders/: core.frag  core.vert
Sabertooth/projects/TrackReader/src/: Mesh.h  Obj3d.h  Shader.h
Sabertooth/projects/meshCube/: run.cpp  run.h  runCube.cpp  runCube.h
Sabertooth/projects/meshCube/objs/mesa/: mesa01.mtl
Sabertooth/projects/meshCube/objs/paintball/: arv_tronco.ptm
Sabertooth/projects/meshCube/shaders/: core.frag  core.vert
Sabertooth/projects/meshCube/src/: Group.h  Material.h  Mesh.h  Obj3d.h  stb_image.h
Sabertooth/projects/simpleTriangle/: run.cpp  run.h
